--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -700,6 +700,20 @@ background-color: #E0E0FF !important; color: black !important; border: solid bla
 
 }
 
+
+.md table {
+     background-color: #E0E0FF !important; color: black; border: solid #B274DE !important; border-color: #B274DE !important;
+}
+.md thead {
+    background-color: #B274DE !important; color: white !important; border: solid #B274DE !important; border-color: #B274DE !important;
+}
+.md tbody {
+     color: #black !important; border: 2px solid #B274DE !important; border-color: #B274DE !important;
+}
+.md tr {
+     color: #Black !important; border: 2px solid #B274DE !important; border-color: #B274DE !important;
+}
+
 .rounded {
 background: url(%%wt50%%) !important;
 }
