--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -974,7 +974,7 @@ a.author[href$="-20"]:before{
 font-size:12px!important;
 visibility:visible!important;
 }
-a.author[href$="-20"]:before {content:"ಠ_ಠ"}
+a.author[href$="-20"]:before {content:"Honorable Chairman Captain -20"}
 
 a.author[href$="cowofdoom"] {
 font-size:0!important;
