--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -386,7 +386,7 @@ height: 800px;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -394,7 +394,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -406,7 +406,7 @@ a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"],
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150c 'motes */
-a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"]
+a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"]
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -447,7 +447,7 @@ a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"], a[href|="/5
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Misfits f */
-a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[href|="/flashsentry"], a[href|="/medicredheart"], a[href|="/imagination"], a[href|="/redheartbutt"], a[href|="/fluttershibe"], a[href|="/graceful"], a[href|="/applejaguar"], a[href|="/happynurse"]
+a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[href|="/flashsentry"], a[href|="/medicredheart"], a[href|="/imagination"], a[href|="/redheartbutt"], a[href|="/fluttershibe"], a[href|="/graceful"], a[href|="/applejaguar"], a[href|="/happynurse"], a[href|="/curiousredheart"], a[href|="/discordsquee"], a[href|="/glassesdash"], a[href|="/casualdash"]
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -475,11 +475,11 @@ a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/prince
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
-a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"]
+a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"]
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
@@ -529,7 +529,7 @@ a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/l
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"]
+a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
@@ -565,11 +565,11 @@ a[href|="/shibepie"], a[href|="/rdtwiponder"]
 {background-position: -0% -900%;}
 
 /* Grid pos 1,9 'motes */
-a[href|="/shibeluna"]
+a[href|="/shibeluna"], a[href|="/twilightstare"]
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
-a[href|="/shibederp"]
+a[href|="/shibederp"], a[href|="/nursesaywhat"]
 {background-position: -200% -900%;}
 
 /* Grid pos 0,10 'motes */
@@ -777,3 +777,6 @@ a[href|="/fluttershibe"] {width:132px;height:150px;background-position: 0 -200px
 a[href|="/graceful"] {width:149px;height:200px;background-position: -551px -126px;}
 a[href|="/applejaguar"] {width:200px;height:158px;background-position: 0 -542px;}
 a[href|="/happynurse"] {width:117px;height:150px;background-position: -434px -175px;}
+a[href|="/curiousredheart"] {width:121px;height:150px;background-position: 0 -350px;}
+a[href|="/discordsquee"] {width:115px;height:150px;background-position: -132px -254px;}
+a[href|="/glassesdash"], a[href|="/casualdash"] {width:85px;height:150px;background-position: -247px -254px;}
