--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1820,15 +1820,6 @@ a[href|="/braeapplesocks"] {
  background-position: -0px -2100px;  
 } 
 
-a[href|="/daisy"] {  
- display: block;
- clear: none;
- float: left; 
- width: 194px;
- height: 150px;
- background-image: url(%%daisy%%);
-} 
-
 a[href|="/daisyready"] {  
  display: block;
  clear: none;
@@ -2212,4 +2203,13 @@ a[href|="/tavirarityhuggle"] {
  width: 115px;
  height: 75px;
  background-image: url(%%tavirarityhuggle%%);
+} 
+
+a[href|="/octacc"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 137px;
+ height: 150px;
+ background-image: url(%%octacc%%);
 } 
