--- a/source-css/lyra.css
+++ b/source-css/lyra.css
@@ -1,4 +1,4 @@
-/* coloring */
+/* coloring RPS ̶W̶U̶S̶ ̶H̶E̶R̶E̶  is a fgt 5/15/14 */
 /*#header {background-color:#A4F9DD}
 #sr-header-area {background-color:#C1F2F0;border-bottom:2px solid #3DAD72}*/
 
