Stylesheet/emote/tag updates 2014-05-25

--- a/source-css/adery.css
+++ b/source-css/adery.css
@@ -456,6 +456,8 @@ a[href|="/ppcleanse"] { display: block; clear: none; float: left; background-ima
 a[href|="/twifight"] { display: block; clear: none; float: left; background-image: url(%%twifight%%); width: 163px; height: 175px; background-position: -0px -0px }
 
 a[href|="/rarafight"] { display: block; clear: none; float: left; background-image: url(%%rarafight%%); width: 175px; height: 175px; background-position: -0px -0px }
+
+a[href|="/bedtimestory"] { display: block; clear: none; float: left; background-image: url(%%bedtimestory%%); width: 412px; height: 200px; background-position: -0px -0px }
 /* gavin14's nightmode flair fix */
 .res-nightmode .content .flair  {
 background-color: transparent!important;
