--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,3 +1,9 @@
+.author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
+
+.author[href$="/Mr.Celestia"]:after {content: ' Of Boxxy ';}
+
+.author:before {content: 'Queen ';}
+
 /*Start of [REDACTED]*/
 
 
@@ -361,7 +367,7 @@ background:url(%%BerryMail%%);
 
 /* NAME CHANGE */
 .sidecontentbox a.author[href$="/therosebudpony"]:after {
-    content: "Rosebud";
+    content: "Queen Ging Rosebud the butterfly";
     font-size: 13px !important;
     visibility: visible !important;
     display: block;
@@ -377,12 +383,17 @@ a.author[href$="/therosebudpony"] {
 }
 
 a.author[href$="/therosebudpony"]:after {
-    content: "Rosebud";
+    content: "Queen Ging Rosebud the butterfly";
     font-size: 10px !important;
     visibility: visible !important;
     display: block;
     letter-spacing: normal
 }
+
+.author[href$="/KillerRabbit1253"]:before {content: 'King Queen ' ;}
+.author[href$="/KillerRabbit1253"]:after {content: ' is the princess of ice cream, BerryTrain, and Boxy' ;}
+
+.author[href$="HonorInDefeat"]:after {content: ' of Disney Songs' ;}
 
 /* STYLESHEET EMOTES */
 
@@ -550,6 +561,8 @@ h8:after {content:" Also I'm a douchebag.";}
 /*color text End*/
 
 /*Announcement Text*/
+
+.author:before {content: 'Queen ';}
 
 blockquote blockquote blockquote {
 	position: absolute;
@@ -777,3 +790,6 @@ a[href="/intensifies2"]:after {
  0% { margin-left: 0px; }
  100% { margin-left: 80px; }
 }
+
+/*ERGRHGTBTRGBFGBF*/
+
