--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -770,6 +770,7 @@ a.author[href$=FrigidMcThunderballs]:before,
 a.author[href$=j-brony]:before,
 a.author[href$=RisenLordM]:before,
 a.author[href$=Princess_Pwny]:before,
+a.author[href$=randyrules]:before,
 a.author[href$=tuckels]:before
 {
 font-size:10px!important; 
@@ -880,6 +881,7 @@ a.author[href$=FrigidMcThunderballs]:before  { content:"Dr. Chandragupta Maurya,
 a.author[href$=j-brony]:before { content:"J's Brownies" }
 a.author[href$=RisenLordM]:before { content:"Risen" }
 a.author[href$=Princess_Pwny]:before { content:"Pwnyed" }
+a.author[href$=randyrules]:before { content:"Princess " }
 a.author[href$=tuckels]:before { content:"KING TUCKELS" }
 
 /* Replacing puppy's name with a picture of derpy */
@@ -971,6 +973,7 @@ a.author[href$=RisenLordM]:after,
 a.author[href$=Lord_Ninka]:after,
 a.author[href$=Princess_Pwny]:after,
 a.author[href$=tuckels]:after,
+a.author[href$=randyrules]:after,
 a.author[href$=CogglerSenpai]:after
 
 {
@@ -1052,6 +1055,7 @@ a.author[href$=Lord_Ninka]:after { content:" The forgotten DBZ character" }
 a.author[href$=Princess_Pwny]:after { content:" your fun" }
 a.author[href$=tuckels]:after { content:" on 05/08/2014" }
 a.author[href$=CogglerSenpai]:after { content:" the art master" }
+a.author[href$=randyrules]:after {content:" of [BANNED]"}
 
 /* Any pre/post-name flair stuff goes here */ 
 
