--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -128,6 +128,16 @@ Height: 70px;
 background-image: url(%%sbsquint%%) !important
 }
 
+a[href="/hornymare"]{
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 155px;
+Height: 200px;
+background-image: url(%%hornymare%%) !important
+}
+
 
 a[href|="/sp"]
 {
