--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -334,6 +334,22 @@ a[href|="/helpersalute"], a[href|="/i24"] {
         height: 192px;
         background-image: url(%%helpersalute%%)
         }
+a[href|="/21pokerface"], a[href|="/i30"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 193px;
+        height: 174px;
+        background-image: url(%%21pokerface%%)
+        }
+a[href|="/glowcloud"], a[href|="/allhail"], a[href|="/i31"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 500px;
+        height: 380px;
+        background-image: url(%%glowcloud%%)
+        }
     /**********************
     *
     *    OTHER EMOTE STUFF
