--- a/source-css/mylittlenosleep.css
+++ b/source-css/mylittlenosleep.css
@@ -1,4 +1,3 @@
-
 /* EvilHom3r did shit here */
 
 /* Change color of selected/linked comment */
@@ -901,3 +900,10 @@ END-PONYSCRIPT-IGNORE{color:red}
 .content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;} 
 body.res-nightmode:first-of-type > .content {background-color: transparent!important;}
 .res-nightmode body{background-color: #222222!important;}
+
+/*grimdarkclops stuff*/
+
+.flair { border: none; background: transparent; color: #7C0202; }
+
+#siteTable a.title { color: #E60909!important }
+#siteTable a.title:visited {color: #500303!important}
