--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -214,11 +214,14 @@ a[href|="/hoo1"] {
     height: 140px;
     background-position: -560px -0px
     }
+START-PONYSCRIPT-IGNORE { color: red; }
+/* Ignored CSS */
 a[href|="/eeeeviiil"] {
     width: 140px;
     height: 112px;
     background-position: -0px -210px
     }
+END-PONYSCRIPT-IGNORE { color: red; }
 a[href|="/talltwi"] {
     width: 93px;
     height: 140px;
