--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -185,7 +185,7 @@ black or #000000 - for all black stuff, including post titles
 
 /* Flairs */
 
-.flair-ghost 
+#res-nightmode .flair-ghost 
 { color:white ; 
 border: 2px solid white; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
@@ -857,6 +857,8 @@ display:inline-block;
 content: "";
 }
 
+.author:before {content: 'Prince ';}
+
 /* ~~~~~~~~~~~~~~~~~~~~~Replacing somebody's name? Add it to the list here too.~~~~~~~~~~~~~~~~ */
 
 a.author[href$="MissSpelled"]:before,
@@ -871,10 +873,26 @@ visibility:visible!important;
 
 /* ~~~~~~~~~~~~~~~~~~~~Replacing somebody's name? Put the replacement here.~~~~~~~~~~~~~~~~~~~~~ */
 
-a.author[href$="MissSpelled"]:before {content:"MisterSpelled"}
-a.author[href$="RAGErER"]:before {content:"IMAGErER"}
-a.author[href$="therosebudpony"]:before {content:"therosebudghost"}
-a.author[href$="Fuzzy_Gauntlets"]:before {content:"Fuzzy_Ghost"}
+a.author[href$="MissSpelled"]:before {content:"Prince MisterSpelled"}
+a.author[href$="RAGErER"]:before {content:"Prince IMAGErER of ghosties"}
+a.author[href$="therosebudpony"]:before {content:"Prince therosebudghost of genericdave's butt"}
+a.author[href$="Fuzzy_Gauntlets"]:before {content:"Prince Fuzzy_Ghost of TwiDash shipfics"}
+
+/* ~~~~~~~~~~~~~~~~~~~Coronating someone? Put their title here.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+a.author[href$="NotEnoughApples"]:after {content:" of oranges"}
+a.author[href$="TheKinginYellow"]:after {content:" of horror buttfiction"}
+a.author[href$="HonorInDefeat"]:after {content:" of spooky movies"}
+a.author[href$="unimaginative_ID"]:after {content:" of mediocrity"}
+a.author[href$="Battlesmit"]:after {content:" of Super Hexagon"}
+a.author[href$="therock66"]:after {content:" of fucking swearing"}
+a.author[href$="Dr_appleman"]:after {content:" of bad taste"}
+a.author[href$="dabkilm2"]:after {content:" of drugs (the illegal kind)"}
+a.author[href$="Derpinglots"]:after {content:" of The Twilight Zone"}
+a.author[href$="RavenclawDash"]:after {content:" of not things"}
+a.author[href$="Meeter77"]:after {content:" of lying in bed like a loser"}
+a.author[href$="Entilliumn"]:after {content:" of analyzing things just a teensy weensy bit overzealously"}
+
 
 /* -----------Spoiler tag within comments.--------------- */  
 
