--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -353,97 +353,95 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 
 /* main setup */
 .flair {
-     padding: 0;
-     background: none;
-     color: black;
-     border: 0;
-     border-radius: 0;
-     background-image: url(%%cheeseflair%%);
-     display: inline-block;
-     width: 16px;
-     height: 16px;
-     text-indent: -9999px;
-     line-height: 240%;
+    padding: 0;
+    background: none;
+    color: black;
+    border: 0;
+    border-radius: 0;
+    background-image: url(%%cheeseflair%%);
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    text-indent: -9999px;
+    line-height: 240%;
 }
-
-/* disable flair text selection */
-.flairselector .customizer input { display: none !important; }
 
 /* individual flair names and offsets */
 /* (these are the names to reference when editing flair) */
-.flair-rainbowdash,.side .md table tr:nth-of-type(1) td:nth-of-type(2):after{background-position:0 0}
-.flair-twilightsparkle,.side .md table tr:nth-of-type(1) td:nth-of-type(3):after{background-position:-100% 0}
-.flair-fluttershy,.side .md table tr:nth-of-type(1) td:nth-of-type(4):after{background-position:-200% 0}
-.flair-applejack,.side .md table tr:nth-of-type(1) td:nth-of-type(5):after{background-position:-300% 0}
-.flair-pinkiepie,.side .md table tr:nth-of-type(3) td:nth-of-type(2):after{background-position:0 -100%}
-.flair-rarity,.side .md table tr:nth-of-type(3) td:nth-of-type(3):after{background-position:-100% -100%}
-.flair-trixie,.side .md table tr:nth-of-type(3) td:nth-of-type(4):after{background-position:-200% -100%}
-.flair-applefritter,.side .md table tr:nth-of-type(3) td:nth-of-type(5):after{background-position:-300% -100%}
-.flair-princessluna,.side .md table tr:nth-of-type(5) td:nth-of-type(2):after{background-position:0 -200%}
-.flair-princesscelestia,.side .md table tr:nth-of-type(5) td:nth-of-type(3):after{background-position:-100% -200%}
-.flair-derpyhooves,.side .md table tr:nth-of-type(5) td:nth-of-type(4):after{background-position:-200% -200%}
-.flair-vinylscratch,.side .md table tr:nth-of-type(5) td:nth-of-type(5):after{background-position:-300% -200%}
-.flair-lyraheartstrings,.side .md table tr:nth-of-type(7) td:nth-of-type(2):after{background-position:0 -300%}
-.flair-bonbon,.side .md table tr:nth-of-type(7) td:nth-of-type(3):after{background-position:-100% -300%}
-.flair-octaviamelody,.side .md table tr:nth-of-type(7) td:nth-of-type(4):after{background-position:-200% -300%}
-.flair-doctorwhooves,.side .md table tr:nth-of-type(7) td:nth-of-type(5):after{background-position:-300% -300%}
-.flair-bigmacintosh,.side .md table tr:nth-of-type(9) td:nth-of-type(2):after{background-position:0 -400%}
-.flair-colgate,.side .md table tr:nth-of-type(9) td:nth-of-type(3):after{background-position:-100% -400%}
-.flair-berrypunch,.side .md table tr:nth-of-type(9) td:nth-of-type(4):after{background-position:-200% -400%}
-.flair-pokeypierce,.side .md table tr:nth-of-type(9) td:nth-of-type(5):after{background-position:-300% -400%}
-.flair-roseluck,.side .md table tr:nth-of-type(11) td:nth-of-type(2):after{background-position:0 -500%}
-.flair-zecora,.side .md table tr:nth-of-type(11) td:nth-of-type(3):after{background-position:-100% -500%}
-.flair-seaswirl,.side .md table tr:nth-of-type(11) td:nth-of-type(4):after{background-position:-200% -500%}
-.flair-carrottop,.side .md table tr:nth-of-type(11) td:nth-of-type(5):after{background-position:-300% -500%}
-.flair-screwball,.side .md table tr:nth-of-type(13) td:nth-of-type(2):after{background-position:0 -600%}
-.flair-nurseredheart,.side .md table tr:nth-of-type(13) td:nth-of-type(3):after{background-position:-100% -600%}
-.flair-caramel,.side .md table tr:nth-of-type(13) td:nth-of-type(4):after{background-position:-200% -600%}
-.flair-braeburn,.side .md table tr:nth-of-type(13) td:nth-of-type(5):after{background-position:-300% -600%}
-.flair-wonderbolts,.side .md table tr:nth-of-type(15) td:nth-of-type(2):after{background-position:0 -700%}
-.flair-shadowbolts,.side .md table tr:nth-of-type(15) td:nth-of-type(3):after{background-position:-100% -700%}
-.flair-scootaloo,.side .md table tr:nth-of-type(15) td:nth-of-type(4):after{background-position:-200% -700%}
-.flair-applebloom,.side .md table tr:nth-of-type(15) td:nth-of-type(5):after{background-position:-300% -700%}
-.flair-sweetiebelle,.side .md table tr:nth-of-type(17) td:nth-of-type(2):after{background-position:0 -800%}
-.flair-davenport,.side .md table tr:nth-of-type(17) td:nth-of-type(3):after{background-position:-100% -800%}
-.flair-cheerilee,.side .md table tr:nth-of-type(17) td:nth-of-type(4):after{background-position:-200% -800%}
-.flair-nightmaremoon,.side .md table tr:nth-of-type(17) td:nth-of-type(5):after{background-position:-300% -800%}
-.flair-princeblueblood,.side .md table tr:nth-of-type(19) td:nth-of-type(2):after{background-position:0 -900%}
-.flair-daringdo,.side .md table tr:nth-of-type(19) td:nth-of-type(3):after{background-position:-100% -900%}
-.flair-carrotcake,.side .md table tr:nth-of-type(19) td:nth-of-type(4):after{background-position:-200% -900%}
-.flair-cupcake,.side .md table tr:nth-of-type(19) td:nth-of-type(5):after{background-position:-300% -900%}
-.flair-flam,.side .md table tr:nth-of-type(21) td:nth-of-type(2):after{background-position:0 -1000%}
-.flair-flim,.side .md table tr:nth-of-type(21) td:nth-of-type(3):after{background-position:-100% -1000%}
-.flair-silverspoon,.side .md table tr:nth-of-type(21) td:nth-of-type(4):after{background-position:-200% -1000%}
-.flair-diamondtiara,.side .md table tr:nth-of-type(21) td:nth-of-type(5):after{background-position:-300% -1000%}
-.flair-snips,.side .md table tr:nth-of-type(23) td:nth-of-type(2):after{background-position:0 -1100%}
-.flair-snails,.side .md table tr:nth-of-type(23) td:nth-of-type(3):after{background-position:-100% -1100%}
-.flair-twist,.side .md table tr:nth-of-type(23) td:nth-of-type(4):after{background-position:-200% -1100%}
-.flair-truffleshuffle,.side .md table tr:nth-of-type(23) td:nth-of-type(5):after{background-position:-300% -1100%}
-.flair-amethyststar,.side .md table tr:nth-of-type(25) td:nth-of-type(2):after{background-position:0 -1200%}
-.flair-hairytipper,.side .md table tr:nth-of-type(25) td:nth-of-type(3):after{background-position:-100% -1200%}
-.flair-fancypants,.side .md table tr:nth-of-type(25) td:nth-of-type(4):after{background-position:-200% -1200%}
-.flair-fleurdelis,.side .md table tr:nth-of-type(25) td:nth-of-type(5):after{background-position:-300% -1200%}
-.flair-princesscadance,.side .md table tr:nth-of-type(27) td:nth-of-type(2):after{background-position:0 -1300%}
-.flair-shiningarmor,.side .md table tr:nth-of-type(27) td:nth-of-type(3):after{background-position:-100% -1300%}
-.flair-filthyrich,.side .md table tr:nth-of-type(27) td:nth-of-type(4):after{background-position:-200% -1300%}
-.flair-hoitytoity,.side .md table tr:nth-of-type(27) td:nth-of-type(5):after{background-position:-300% -1300%}
-.flair-cloudchaser,.side .md table tr:nth-of-type(29) td:nth-of-type(2):after{background-position:0 -1400%}
-.flair-flitter,.side .md table tr:nth-of-type(29) td:nth-of-type(3):after{background-position:-100% -1400%}
-.flair-lilyvalley,.side .md table tr:nth-of-type(29) td:nth-of-type(4):after{background-position:-200% -1400%}
-.flair-grannysmith,.side .md table tr:nth-of-type(29) td:nth-of-type(5):after{background-position:-300% -1400%}
-.flair-daisy,.side .md table tr:nth-of-type(31) td:nth-of-type(2):after{background-position:0 -1500%}
-.flair-queenchrysalis,.side .md table tr:nth-of-type(31) td:nth-of-type(3):after{background-position:-100% -1500%}
-.flair-lotusblossom,.side .md table tr:nth-of-type(31) td:nth-of-type(4):after{background-position:-200% -1500%}
-.flair-aloe,.side .md table tr:nth-of-type(31) td:nth-of-type(5):after{background-position:-300% -1500%}
-.flair-drstable,.side .md table tr:nth-of-type(33) td:nth-of-type(2):after{background-position:0 -1600%}
-.flair-sewnsow,.side .md table tr:nth-of-type(33) td:nth-of-type(3):after{background-position:-100% -1600%}
-.flair-spitfire,.side .md table tr:nth-of-type(33) td:nth-of-type(4):after{background-position:-200% -1600%}
-.flair-mayormare,.side .md table tr:nth-of-type(33) td:nth-of-type(5):after{background-position:-300% -1600%}
-.flair-surprise,.side .md table tr:nth-of-type(35) td:nth-of-type(2):after{background-position:0 -1700%}
-.flair-soarin,.side .md table tr:nth-of-type(35) td:nth-of-type(3):after{background-position:-100% -1700%}
-.flair-sunsetshimmer,.side .md table tr:nth-of-type(37) td:nth-of-type(2):after{background-position:0 -1800%}
-.flair-snowdrop,.side .md table tr:nth-of-type(37) td:nth-of-type(3):after{background-position:-100% -1800%}
-.flair-flashsentry,.side .md table tr:nth-of-type(37) td:nth-of-type(4):after{background-position:-200% -1800%}
-.flair-cocopommel,.side .md table tr:nth-of-type(37) td:nth-of-type(5):after{background-position:-300% -1800%}
-.flair-cheesesandwich,.side .md table tr:nth-of-type(39) td:nth-of-type(2):after{background-position:0 -1900%}
-.flair-maudpie,.side .md table tr:nth-of-type(39) td:nth-of-type(3):after{background-position:-100% -1900%}
+.flair-rainbowdash { background-position: 0 0; }
+.flair-twilightsparkle { background-position: -100% 0; }
+.flair-fluttershy { background-position: -200% 0; }
+.flair-applejack { background-position: -300% 0; }
+.flair-pinkiepie { background-position: 0 -100%; }
+.flair-rarity { background-position: -100% -100%; }
+.flair-trixie { background-position: -200% -100%; }
+.flair-princessluna { background-position: 0 -200%; }
+.flair-princesscelestia { background-position: -100% -200%; }
+.flair-derpyhooves { background-position: -200% -200%; }
+.flair-vinylscratch { background-position: -300% -200%; }
+.flair-lyraheartstrings { background-position: 0 -300%; }
+.flair-sweetiedrops { background-position: -100% -300%; }
+.flair-octaviamelody { background-position: -200% -300%; }
+.flair-doctorwhooves { background-position: -300% -300%; }
+.flair-bigmcintosh { background-position: 0 -400%; }
+.flair-minuette { background-position: -100% -400%; }
+.flair-berrypunch { background-position: -200% -400%; }
+.flair-pokeypierce { background-position: -300% -400%; }
+.flair-roseluck { background-position: 0 -500%; }
+.flair-zecora { background-position: -100% -500%; }
+.flair-seaswirl { background-position: -200% -500%; }
+.flair-goldenharvest { background-position: -300% -500%; }
+.flair-screwball { background-position: 0 -600%; }
+.flair-nurseredheart { background-position: -100% -600%; }
+.flair-caramel { background-position: -200% -600%; }
+.flair-braeburn { background-position: -300% -600%; }
+.flair-wonderbolts { background-position: 0 -700%; }
+.flair-shadowbolts { background-position: -100% -700%; }
+.flair-scootaloo { background-position: -200% -700%; }
+.flair-applebloom { background-position: -300% -700%; }
+.flair-sweetiebelle { background-position: 0 -800%; }
+.flair-davenport { background-position: -100% -800%; }
+.flair-cheerilee { background-position: -200% -800%; }
+.flair-nightmaremoon { background-position: -300% -800%; }
+.flair-princeblueblood { background-position: 0 -900%; }
+.flair-daringdo { background-position: -100% -900%; }
+.flair-carrotcake { background-position: -200% -900%; }
+.flair-cupcake { background-position: -300% -900%; }
+.flair-flam { background-position: 0 -1000%; }
+.flair-flim { background-position: -100% -1000%; }
+.flair-silverspoon { background-position: -200% -1000%; }
+.flair-diamondtiara { background-position: -300% -1000%; }
+.flair-snips { background-position: 0 -1100%; }
+.flair-snails { background-position: -100% -1100%; }
+.flair-twist { background-position: -200% -1100%; }
+.flair-truffleshuffle { background-position: -300% -1100%; }
+.flair-amethyststar { background-position: 0 -1200%; }
+.flair-hairytipper { background-position: -100% -1200%; }
+.flair-fancypants { background-position: -200% -1200%; }
+.flair-fleurdelis { background-position: -300% -1200%; }
+.flair-princesscadance { background-position: 0 -1300%; }
+.flair-shiningarmor { background-position: -100% -1300%; }
+.flair-filthyrich { background-position: -200% -1300%; }
+.flair-hoitytoity { background-position: -300% -1300%; }
+.flair-cloudchaser { background-position: 0 -1400%; }
+.flair-flitter { background-position: -100% -1400%; }
+.flair-lilyvalley { background-position: -200% -1400%; }
+.flair-grannysmith { background-position: -300% -1400%; }
+.flair-daisy { background-position: 0 -1500%; }
+.flair-queenchrysalis { background-position: -100% -1500%; }
+.flair-lotusblossom { background-position: -200% -1500%; }
+.flair-aloe { background-position: -300% -1500%; }
+.flair-drstable { background-position: 0 -1600%; }
+.flair-sewnsow { background-position: -100% -1600%; }
+.flair-spitfire { background-position: -200% -1600%; }
+.flair-mayormare { background-position: -300% -1600%; }
+.flair-soarin { background-position: -100% -1700%; }
+.flair-sunsetshimmer { background-position: 0 -1800%; }
+.flair-snowdrop { background-position: -100% -1800%; }
+.flair-flashsentry { background-position: -200% -1800%; }
+.flair-cocopommel { background-position: -300% -1800%; }
+.flair-surprise { background-position: 0 -1900%; }
+.flair-applefritter { background-position: -100% -1900%; }
+.flair-cheesesandwich { background-position: -200% -1900%; }
+.flair-maudpie { background-position: -300% -1900%; }
+.flair-blossomforth { background-position: 0 -2000%; }
