--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -32,6 +32,8 @@ a[href|="/kittyluna"] {background-image: url(%%kittyluna%%);width:200px;height:1
 a[href|="/twilestianuzzle"] {background-image: url(%%twilestianuzzle%%);width:170px;height:140px;display:block;float:left;}
 a[href|="/fsbatnom"] {background-image: url(%%fsbatnom%%);width:200px;height:130px;display:block;float:left;}
 a[href|="/lunarainbowbarf"], a[href|="/lunabarf"] {background-image: url(%%lunarainbowbarf%%);width:191px;height:155px;display:block;float:left;}
+a[href|="/walkingabout"] {background-image: url(%%walkingabout%%);width:200px;height:156px;display:block;float:left;}
+a[href|="/rainbowdansen"] {background-image: url(%%rainbowdansen%%);width:165px;height:200px;display:block;float:left;}
 
 /*
  ************
