--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -8,13 +8,37 @@ div.titlebox span.word {
 }
 
 .redditname a {
-  color: #FF00FF;
+   color: #FF00FF;
 }
 
+.footer-parent
+{
+ padding-bottom: 210px;
+ height:500px;
+ clear:both;
+ text-align:center;
+ width:100%;
+ background-image:url(%%Dickbutt2%%);
+ background-repeat:no-repeat;
+ margin-bottom:-25px;
+ background-position: bottom center;
+}
+
+/* Header */
 #header {
-  background: #FFFFFF;
-  font-family: arial;
-  border: 0px solid #000000;
+height: 0x; 
+    background: url(%%Twilight%%) no-repeat #FFFFFF;
+    margin-bottom: 52px;
+    background-position: 83% 20px;
+    border-bottom: 0px solid #314D5B;
+    overflow:visible;
+}
+
+
+#sr-header-area {
+ background-color: #FFAAFF!important;
+ font-size: 7pt !important;
+ /*font-family: Arial;*/
 }
 
 #header-bottom-left {
@@ -24,6 +48,18 @@ div.titlebox span.word {
   height:237px;
 }
 
+
+#header .pagename.redditname a {
+    background: url(%%animatedheader%%) 0px 0px no-repeat;
+    width: 1100px;
+    height: 237px;
+    display: inline-block;
+    position: absolute;
+    left: 1px;
+    top: 20px;
+    text-indent: -9999px;
+    z-index: 100;
+}
 
 #header-img-a {
   display: inline;
@@ -37,9 +73,9 @@ div.titlebox span.word {
 
 .tabmenu {
   position:absolute;
-  bottom:0%;
+  bottom:-10%;
   z-index: 99;
-  left: 11%;
+  left: 3%;
 }
 
 /* Aforementioned block ends here */
@@ -61,14 +97,48 @@ div.titlebox .users-online span.number:after {
 
 /* font controls, color is color of text that isn't modified by any other css */
 body {
-  font-family: Courier;
-  color:#770077;
+  /*font-family: Arial;*/
+  color:#770077 !important;
 }
+
+.res-nightmode
+body {
+   /*font-family: Arial;*/
+   color:#770077 !important;
+}
+
+.md p{
+  font-size: 10.5pt
+}
+
+.noncollapsed .md p {
+   color: #770077 !important;
+   font-size: 10pt
+}
+
+.res-nightmode .md p{
+   color:#770077 !important;
+   font-size: 10pt
+}
+
+.res-nightmode .score.likes {
+    color:#C0C !important;
+}
+
 
 /* Self post background. */
 .link .expando .usertext .md {
   border: 1px solid #990099 !important;
   background-color: #FFAAFF !important;
+}
+.res-nightmode
+.noncollapsed .md p {
+color: #770077 !important;
+}
+
+.res-nightmode
+.keyHighlight{
+   color: #770077 !important;
 }
 
 /* content is the message displayed when someone downvotes a post */
@@ -86,7 +156,26 @@ body {
 
 /* link colors */
 a {
-  color:#FF82FF;
+  color:#CC00CC !important;
+}
+.res-nightmode
+.link .entry .tagline {
+    font-size: 10px !important;
+    color:#CC00CC !important;
+}
+.res-nightmode
+.entry time {
+color: #CC00CC !important;
+}
+.res-nightmode
+element.style {
+color: bisque;
+}
+
+.res-nightmode
+.link .entry .tagline time, .entry .tagline a,  {
+    font-size: x-small;
+    color:#CC00CC !important;
 }
 
 /* Code for spoiler tags */
@@ -186,19 +275,45 @@ a.author[href|="SaultSpartan"]:before {
   content: "Dead Pwincess SaultSpartan"
 }
 */
+
 a.author:before
 {
-  font-size:10px!important; 
+  font-size:10.5px!important; 
   visibility:visible!important;
-  content: "Pwetty Pwincess "
+  content: "Pwetty Pwincess Tulpa "
 }
 a.author:after
 {
-  font-size:10px!important; 
+  font-size:10.5px!important; 
   visibility:visible!important;
   content: "-kun"
 }
+
+a.author[href$="Xandrez192"]:before {
+    content: "";
+    font-size: 0px !important;
+    visibility: visible !important;
+    display: block;
+    letter-spacing: normal
+}
+
+a.author[href$="Xandrez192"] {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px
+}
+
+a.author[href$="Xandrez192"]:after {
+    content: "DickButt";
+    font-size: 10px !important;
+    visibility: visible !important;
+    display: block;
+    letter-spacing: normal
+}
 /*
+
 h1.redditname {
   font-size:0!important; 
   overflow:hidden; 
@@ -615,3 +730,234 @@ a[href|="/rdteehee"] {
   width:175px;
   height:153px;
 }
+
+/* CSS text box bigger, because it being small annoys me. */
+.stylesheet-customize-container textarea { height:500px; }
+
+ /* Silly garbage */
+/*i don't think this works how u think it works */
+/*It works exactly how I thought it worked, fuck you.*/
+
+div[data-fullname$="s"] .usertext-body .md:after{content:" Also, Season 4 is great."; color: #707 !important;}
+div[data-fullname$="m"] .usertext-body .md:after{content:" Also, Season 4 is great."; color: #707 !important;}
+div[data-fullname$="f"] .usertext-body .md:after{content:" Also, Season 4 is great."; color: #707 !important;}
+div[data-fullname$="d"] .usertext-body .md:after{content:" Also, Season 4 is great."; color: #707 !important;}
+div[data-fullname$="z"] .usertext-body .md:after{content:" Also, Xandrez sucks."; color: #707 !important;}
+div[data-fullname$="666"] .usertext-body .md:after{content:"I just noticed this comment, and I don't mean to sound like a parasprite, but I feel like you're being like a big Discord now. Trying to stir things up and ruin the Harmony of this subreddit. Speaking as the element of moderation here, I feel like you're being bucking crazy and everypony knows that you need to be less sarcastic. Neighsayers come and go, but you're being bucking mean right now by being sarcastic about this super important thing. It's 20% cooler to be kind and keep the harmony of friends because Friendship is truly Magic. Because we gotta share, and we gotta care in our sub. It's the right thing to do. It's the mane thing to do. /) Hoofbump! "; color: #707 !important;}
+
+/* Animated Header */
+/* Vector source: http://fc02.deviantart.net/fs71/i/2013/030/c/8/alicorn_twilight_by_designjh-d5t8ga8.png*/
+
+#header {
+animation:heavybreathing 60s ease-in-out infinite;
+-webkit-animation:heavybreathing 60s ease-in-out infinite;
+}
+
+@-webkit-keyframes heavybreathing{
+0%   {background-position:130% 300px;}
+1%   {background-position:130% 290px;}
+3%  {background-position:130% 280px;}
+30%  {background-position:130% 10px;}
+50%  {background-position:130% -150px;}
+60%  {background-position:130% -300px;}
+65%  {background-position:90% -300px;}
+70%  {background-position:130% -275px;}
+75%  {background-position:90% -250px;}
+80%  {background-position:130% -225px;}
+85%  {background-position:90% -200px;}
+90%  {background-position:130% -175px;}
+95%  {background-position:90% -150px;}
+98%  {background-position:139% -125px;}
+100% {background-position:130% 3000px;}
+}
+
+@keyframes heavybreathing{
+0%   {background-position:130% 300px;}
+1%   {background-position:130% 290px;}
+3%  {background-position:130% 280px;}
+30%  {background-position:130% 10px;}
+50%  {background-position:130% -150px;}
+60%  {background-position:130% -300px;}
+65%  {background-position:90% -300px;}
+70%  {background-position:130% -275px;}
+75%  {background-position:90% -250px;}
+80%  {background-position:130% -225px;}
+85%  {background-position:90% -200px;}
+90%  {background-position:130% -175px;}
+95%  {background-position:90% -150px;}
+98%  {background-position:139% -125px;}
+100% {background-position:130% 3000px;}
+}
+
+/* Animated have mail icon */
+
+#mail.havemail   {
+
+  height: 106px !important;
+  width: 102px !important;    
+  background: url(%%Twilightflying%%) 
+  no-repeat;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  margin-top: 0px;
+
+
+}
+
+#mail.havemail{
+  animation: animationFrames linear 30s;
+  animation-iteration-count: 1000;
+  transform-origin: ;
+  -webkit-animation: animationFrames linear 30s;
+  -webkit-animation-iteration-count: 1000;
+  -webkit-transform-origin: ;
+}
+
+@keyframes animationFrames{
+  0% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotateY(-180deg) rotate(-0);
+  }
+  25% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:   rotateY(-180deg) translateX(1000px) ;
+  }
+
+  26% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:   rotateY(-180deg) translateX(1000px) rotate(-90deg);
+  }
+
+  50% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:   rotateY(-180deg) translateY(600px) translateX(1000px) rotate(-90deg);
+  }
+
+  51% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:   rotateY(-180deg) translateY(600px) translateX(1000px) rotate(-180deg);
+  }
+
+  75% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotateY(-180deg) translateX(0px) translateY(600px) rotate(-180deg);
+  }
+
+
+  76% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotateY(-180deg) translateX(0px) translateY(600px) rotate(-90deg);
+  }
+
+98% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotateY(-180deg) translateX(0px) translateY(10px) rotate(-90deg);
+  }
+
+  99% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotateY(-180deg) translateX(0px) translateY(10px) rotate(0deg);
+  }
+
+  100% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotateY(-180deg) translate(0px,0px) rotate(0deg);
+  }
+
+}
+
+@-webkit-keyframes animationFrames{
+  0% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotateY(-180deg);
+  }
+  25% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:   rotateY(-180deg) translateX(1000px) ;
+  }
+
+  26% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:   rotateY(-180deg) translateX(1000px) rotate(-90deg);
+  }
+
+  50% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:   rotateY(-180deg) translateY(600px) translateX(1000px) rotate(-90deg);
+  }
+
+  51% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:   rotateY(-180deg) translateY(600px) translateX(1000px) rotate(-180deg);
+  }
+
+  75% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotateY(-180deg) translateX(0px) translateY(600px) rotate(-180deg);
+  }
+
+
+  76% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotateY(-180deg) translateX(0px) translateY(600px) rotate(-90deg);
+  }
+
+  98% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotateY(-180deg) translateX(0px) translateY(10px) rotate(-90deg);
+  }
+
+99% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotateY(-180deg) translateX(0px) translateY(10px) rotate(0deg);
+  }
+
+  100% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotateY(-180deg) translate(0px,0px) rotate(0deg);
+  }
+}
+
+.res-nightmode .usertext.border .usertext-body { background-color: rgb(255, 170, 255) !important; }
+
+
