--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -113,7 +113,10 @@ div#header-bottom-left ul.tabmenu {
 }
 
 .side {
-  width:320px
+   padding: 0 10px;
+   width: 320px;
+   line-height: 1.3;
+   z-index: 10;
 }
 
 .side h6 {
@@ -204,6 +207,93 @@ body {
   margin-left: 25px;
   margin-top: 5px;
 }
+
+/* Sidebar Buttons */
+.sidebox.submit {
+width: 320px;
+}
+body:not(.listing-page) .morelink {
+border-color: #4D1414!important;
+border-radius: 2px!important;
+background: none transparent;
+background-color: #FFC46C;
+background:-webkit-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-moz-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-ms-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-o-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:linear-gradient(#FDFCC7, #E98B97, #DD99D9)!important;
+color: #FFAC59;
+}
+body:not(.listing-page) .morelink a {
+color: #FFE3E3!important;
+text-shadow: 1px 1px 2px #000000;
+}
+body .morelink {
+padding: 4px 10px;
+border-color: #4D1414!important;
+border-radius: 2px!important;
+background: none transparent;
+background-color: #FFC46C;
+background:-webkit-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-moz-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-ms-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-o-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:linear-gradient(#FDFCC7, #E98B97, #DD99D9)!important;
+color: #fff;
+font-weight: normal;
+letter-spacing: 0;
+}
+body .morelink:hover,
+body:not(.listing-page) .morelink:hover {
+border-color: #4D1414!important;
+background: none transparent;
+background-color: #FFC46C;
+background:-webkit-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-moz-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-ms-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:-o-linear-gradient(#fdfcc7, #e98b97, #dd99d9)!important;
+background:linear-gradient(#FDFCC7, #E98B97, #DD99D9)!important;
+color: #fff;
+}
+body .morelink a {
+color: #FFE3E3!important;
+font-weight: bold;
+font-size: 16px;
+text-shadow: 1px 1px 2px #0f0f0f;
+}
+body .morelink a:hover,
+body:not(.listing-page) .morelink:hover a,
+body:not(.listing-page) .morelink a:hover {
+color: #FFE3E3!important;
+text-shadow: 1px 1px 2px #003300, 0px 0px 15px #fff, 0px 0px 15px #6be38d, 0px 0px 15px #6be38d!important;
+}
+body .morelink .nub,
+body .morelink:hover .nub,
+body .disabled .morelink .nub,
+body .disabled .morelink:hover .nub {
+background: none transparent!important;
+}
+body .disabled .morelink,
+body .disabled .morelink:hover {
+border-color: #f5f5f5!important;
+background-color: #eee;
+background-image: none!important;
+}
+body .disabled .morelink a,
+body .disabled .morelink a:hover {
+color: #aaa!important;
+text-shadow: none!important;
+cursor: default!important;
+}
+
+#search input[type] {
+  width: 314px;
+}
+
+#searchexpando {
+  width: 299px;
+}
+
 
     /***********************
     *
@@ -808,11 +898,13 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
     display: inline-block !important;
 }
 
-.side .md table:nth-of-type(1) tr:nth-of-type(odd) td:after {background-image:url(%%sunnyamotes%%);height:70px}
+.side .md table:nth-of-type(1) tr:nth-of-type(odd) td:after {
+  background-image:url(%%sunnyamotes%%);
+  height:70px;
+}
 .side .md table:nth-of-type(2) tr:nth-of-type(odd) td:after {background-image:url(%%sunnybmotes%%);height:70px}
 .side .md table:nth-of-type(3) td {text-align:center!important}
 .side .md table:nth-of-type(4) td {text-align:center!important}
-
 
 /*Row/col sizes: (And some undoing for number col*/
 .side .md table th {
@@ -835,6 +927,8 @@ border:0;
 }
 
 .side .md table tbody tr:nth-of-type(odd) td:after {content:"";width:70px;display:block}
+.side .md table:nth-of-type(3) tr:nth-of-type(odd) {line-height:50%!important}
+.side .md table:nth-of-type(4) tr:nth-of-type(odd) {line-height:50%!important}
 
 
 
@@ -843,12 +937,14 @@ border:0;
 {
  font-family:verdana, arial, helvetica, sans-serif;
  font-size:12px;
- border:1px solid #CCC;
+ border-width:1px 1px medium;
+ border-style: solid solid none;
+ border-color: #CCC;
  display:block;
  cursor:pointer;
  text-align:center;
- margin:0 0 2px;
- padding:2px 0 0;
+ margin:0;
+ padding:0;
  width:99.5%;
  height:16px;
 }
@@ -859,7 +955,6 @@ border:0;
 /*Hover a tab to see emotes notice*/
 .side .md h2
 {
- width:96.75%px;
  color:black;
  font-weight:normal;
  font-size:12px;
@@ -1094,3 +1189,4 @@ background-position:0px -70px!important
 .thing[data-fullname$="n"] ,.thing[data-fullname$="t"] ,.thing[data-fullname$="a"] {
   background-position:0px -170px!important
 }
+
